--- a/index.html
+++ b/index.html
@@ -11,6 +11,10 @@
         <div id="icon-computer" class="icon">My Computer</div>
         <div id="icon-trash" class="icon">Recycle Bin</div>
     </div>
+    <div id="start-menu">
+        <div class="menu-item">Programs</div>
+        <div class="menu-item">Shutdown</div>
+    </div>
     <div id="taskbar">
         <div id="start-button">Start</div>
     </div>
