--- a/index.html
+++ b/index.html
@@ -8,11 +8,17 @@
 </head>
 <body>
     <div id="desktop">
-        <div id="icon-computer" class="icon">My Computer</div>
-        <div id="icon-trash" class="icon">Recycle Bin</div>
+        <figure id="icon-computer" class="icon">
+            <img src="https://via.placeholder.com/32?text=PC" alt="My Computer icon">
+            <figcaption>My Computer</figcaption>
+        </figure>
+        <figure id="icon-trash" class="icon">
+            <img src="https://via.placeholder.com/32?text=Bin" alt="Recycle Bin icon">
+            <figcaption>Recycle Bin</figcaption>
+        </figure>
     </div>
     <div id="taskbar">
-        <div id="start-button">Start</div>
+        <button id="start-button">Start</button>
     </div>
     <script src="script.js"></script>
 </body>
