--- a/index.html
+++ b/index.html
@@ -9,27 +9,27 @@
 <body>
     <div id="desktop">
 
-        <figure id="icon-computer" class="icon">
+        <figure id="icon-computer" class="icon" tabindex="0" role="button">
             <img src="https://via.placeholder.com/32?text=PC" alt="My Computer icon">
             <figcaption>My Computer</figcaption>
         </figure>
-        <figure id="icon-trash" class="icon">
+        <figure id="icon-trash" class="icon" tabindex="0" role="button">
             <img src="https://via.placeholder.com/32?text=Bin" alt="Recycle Bin icon">
             <figcaption>Recycle Bin</figcaption>
         </figure>
 
         <div id="window-sample" class="window" style="top:100px; left:100px;">
-            <div class="title-bar">Sample Window</div>
+            <div class="title-bar">Sample Window <button class="close-button" aria-label="Close window">X</button></div>
             <div class="window-content">Welcome to Win95!</div>
         </div>
     </div>
-    <div id="start-menu">
-        <div class="menu-item">Programs</div>
-        <div class="menu-item">Shutdown</div>
+    <div id="start-menu" role="menu" aria-hidden="true">
+        <div class="menu-item" role="menuitem">Programs</div>
+        <div class="menu-item" role="menuitem">Shutdown</div>
 
     </div>
     <div id="taskbar">
-        <button id="start-button">Start</button>
+        <button id="start-button" aria-haspopup="true" aria-controls="start-menu">Start</button>
     </div>
     <script src="script.js"></script>
 </body>
