Add working desktop icons and start menu actions

--- a/index.html
+++ b/index.html
@@ -10,11 +10,11 @@
     <div id="desktop">
 
         <figure id="icon-computer" class="icon" tabindex="0" role="button">
-            <img src="https://via.placeholder.com/32?text=PC" alt="My Computer icon">
+            <img src="mycomputer.svg" alt="My Computer icon" width="32" height="32">
             <figcaption>My Computer</figcaption>
         </figure>
         <figure id="icon-trash" class="icon" tabindex="0" role="button">
-            <img src="https://via.placeholder.com/32?text=Bin" alt="Recycle Bin icon">
+            <img src="recycle-bin.svg" alt="Recycle Bin icon" width="32" height="32">
             <figcaption>Recycle Bin</figcaption>
         </figure>
 
@@ -24,8 +24,8 @@
         </div>
     </div>
     <div id="start-menu" role="menu" aria-hidden="true">
-        <div class="menu-item" role="menuitem">Programs</div>
-        <div class="menu-item" role="menuitem">Shutdown</div>
+        <div id="menu-programs" class="menu-item" role="menuitem">Programs</div>
+        <div id="menu-shutdown" class="menu-item" role="menuitem">Shutdown</div>
 
     </div>
     <div id="taskbar">
