Add draggable icons, clock and new svg icons

--- a/index.html
+++ b/index.html
@@ -9,21 +9,21 @@
 <body>
     <div id="desktop">
 
-        <figure id="icon-computer" class="icon" tabindex="0" role="button">
-            <img src="mycomputer.svg" alt="My Computer icon" width="32" height="32">
+        <figure id="icon-computer" class="icon" tabindex="0" role="button" style="top:10px;left:10px;">
+            <img src="icons/computer.svg" alt="My Computer icon" width="32" height="32">
             <figcaption>My Computer</figcaption>
         </figure>
-        <figure id="icon-trash" class="icon" tabindex="0" role="button">
-            <img src="recycle-bin.svg" alt="Recycle Bin icon" width="32" height="32">
+        <figure id="icon-trash" class="icon" tabindex="0" role="button" style="top:10px;left:110px;">
+            <img src="icons/recycle.svg" alt="Recycle Bin icon" width="32" height="32">
             <figcaption>Recycle Bin</figcaption>
         </figure>
 
-        <figure id="icon-notepad" class="icon" tabindex="0" role="button">
-            <img src="mycomputer.svg" alt="Notepad icon" width="32" height="32">
+        <figure id="icon-notepad" class="icon" tabindex="0" role="button" style="top:90px;left:10px;">
+            <img src="icons/notepad.svg" alt="Notepad icon" width="32" height="32">
             <figcaption>Notepad</figcaption>
         </figure>
-        <figure id="icon-minesweeper" class="icon" tabindex="0" role="button">
-            <img src="mycomputer.svg" alt="Minesweeper icon" width="32" height="32">
+        <figure id="icon-minesweeper" class="icon" tabindex="0" role="button" style="top:90px;left:110px;">
+            <img src="icons/minesweeper.svg" alt="Minesweeper icon" width="32" height="32">
             <figcaption>Minesweeper</figcaption>
         </figure>
 
@@ -74,6 +74,7 @@
     <div id="taskbar">
         <button id="start-button" aria-haspopup="true" aria-controls="start-menu">Start</button>
         <div id="taskbar-apps"></div>
+        <div id="taskbar-clock"></div>
     </div>
     <script src="script.js"></script>
 </body>
